# sphinx_pdj_theme

./: .gitignore  LICENSE  MANIFEST.in  README  README.md  babel.cfg  pyproject.toml  setup.py
sphinx_pdj_theme/: __init__.py  footer.html  layout.html  search.html  sidebar.html  theme.conf  theme.toml
sphinx_pdj_theme/static/css/: darker.css  pdj.css
sphinx_pdj_theme/static/js/: pdj.js
